vlib/v/checker/tests/string_to_enum_cast_err.vv
enum Test {
	one
	two
	three
}

fn main() {
	_ := Test('one')

	my_str := 'one'
	_ := Test(my_str)
}
